# summit

./: -r  .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .changes.md  .changespec.yml  .cliff.toml  .coverage  .cspell.json  .deps.json  .dockerignore  .doclinkignore  .editorconfig  .env  .env.example  .env.maestro-dev  .env.production  .envrc.template  .eslintcache  .eslintignore  .eslintrc.cjs  .eslintrc.complexity.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.security.cjs  .eslintrc.ux-governance.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.backup  .gitignore.rej  .gitleaks.toml  .gitleaksignore  .gitmodules  .graphqlrc.yml  .hadolint.yaml  .jest-list.txt  .jscpd.json  .learnings  .lefthook-signature  (+1800 more)
acdc/: Cargo.toml  README.md
acdc/src/: dsl.rs  lib.rs  main.rs  planner.rs  policy.rs  signing.rs  simulator.rs
adversarial-misinfo-defense-platform/: DISTRIBUTION_README.md  Dockerfile  Dockerfile.web  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PATENT_CLAIM_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES.md  SUMMARY.md  USER_GUIDE.md  VALIDATION_REPORT.md  __init__.py  __main__.py  advanced_testing.py  adversarial_training.py  bidirectional_temp_control.py  cli.py  cli_entry.py  cognitive_dissonance_modeling.py  config.py  demo.py  demo_bidirectional.py  demo_revolutionary_features.py  demo_ultimate_advanced_features.py  docker-compose.yml  enhanced_detection.py  example_usage.py  fractal_consciousness_expansion.py  ip.meta.json  main.py  neurosymbolic_consciousness_engine.py  performance_optimization.py  pyproject.toml  quantum_entropy_optimization.py  quantum_inspired_analysis.py  red_blue_team.py  requirements.txt  run.sh  (+10 more)
adversarial-misinfo-defense-platform/detection_modules/: __init__.py  audio_detector.py  deepfake_detector.py  image_detector.py  main_detector.py  meme_detector.py  text_detector.py  video_detector.py
adversarial-misinfo-defense-platform/llm/: __init__.py  claude_client.py  prompts.py  scenario_generator.py
adversarial-misinfo-defense-platform/web/: index.js  package.json
agent-bundle/: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml
agent-bundle/config/: agent-config.yaml
agent-bundle/prompts/: PROMPTS.md
agql/agql-cli/: Cargo.toml
agql/agql-core/: Cargo.toml
agql/agql-server/: Cargo.toml
ai-ml-suite/emu3/: pyproject.toml
ai-ml-suite/fusion_sklearn/: README.md  pyproject.toml
ai/cdis/: README.md  app.py  learners.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulator.py
apm/: Cargo.toml
apm/src/: exposure.rs  lib.rs  planner.rs  simulator.rs  types.rs
apm/tests/: planner_tests.rs
auto_scientist/: .gitignore  Makefile  README.md  REPORT.md  cli.py  mkdocs.yml  pyproject.toml  requirements.txt
auto_scientist/ai-stack/: candidate-agent.ts  research-lane.ts
auto_scientist/compliance/: data_governance.md  sbom.md  threat_model.md
auto_scientist/docs/: api.md  architecture.md  index.md
auto_scientist/experiments/: analyze_results.py  harness.py  run_auto_scientist.py  run_baseline.py
auto_scientist/go/: brief.md  brief_frontier_alignment.md
auto_scientist/impl/: runner.py
auto_scientist/integration/: api_contract.md  summit_notes.md
auto_scientist/ip/: claims.md  claims_alignment_loop.md  draft_spec.md  fto.md  prior_art.csv
auto_scientist/prompts/: planner.prompt.yaml
auto_scientist/spec/: frontier_alignment_loop.md  method.md
auto_scientist/sprint_plans/: SPRINT_02_FRONTIER_ALIGNMENT_SCALE.md  sprint_02_tickets.csv
auto_scientist/tests/: test_cli.py  test_curriculum.py  test_graph.py  test_loop.py  test_runner.py  test_storage.py
ceh/: README.md  __init__.py  cli.py  datasets.py  evaluation.py  pyproject.toml
cmol/: Cargo.toml  README.md
cmol/src/: lib.rs
cognitive_insights_engine/: pyproject.toml
cognitive_insights_engine/config/: config.yaml
cognitive_insights_engine/counterfactual_sim/: graph_ops.py  simulator.py
cognitive_insights_engine/sentiment_service/: main.py  model.py  openapi_spec.yaml  router.py  sample_prompt.txt  utils.py
decs/: Cargo.toml
decs/src/: lib.rs  model.rs  reconciler.rs  scheduler.rs
decs/tests/: scheduler_tests.rs
deescalation-coach/: Makefile  pyproject.toml
deescalation-coach/app/: api.py  config.py  diagnostics.py  ethics.py  guidance.py  main.py  observability.py  redact.py  rewrite.py  schemas.py  security.py
deescalation-coach/docs/: API.md  ETHICS.md  OPERATIONS.md  README.md  SECURITY.md
deescalation-coach/infra/: Dockerfile  docker-compose.yml
deescalation-coach/tests/: fixtures.py  test_api.py  test_diagnostics.py  test_ethics.py  test_redact.py  test_rewrite.py
des/: Cargo.toml  README.md
des/src/: batcher.rs  config.rs  diff.rs  error.rs  lib.rs  store.rs
djce-pb/: Cargo.toml  README.md
djce-pb/src/: bindings.rs  bloom.rs  hash.rs  lib.rs  minhash.rs  report.rs  sketch.rs
dpsc/: Cargo.toml
dpsc/src/: annotation.rs  compiler.rs  errors.rs  ledger.rs  lib.rs  main.rs  noise.rs  plan.rs  testing.rs
dpsc/tests/: compiler.rs
graph-xai/: pyproject.toml
graph-xai/app/: api.py  audit.py  config.py  er_explain.py  ethics.py  main.py  schemas.py  security.py
graph-xai/docs/: OPERATIONS.md
graph-xai/infra/: Dockerfile  docker-compose.yml
graph-xai/tests/: fixtures.py  (+2 more)
gwde/: CMakeLists.txt  README.md
ibrs/: Cargo.toml
impl/: Makefile  README.md  pyproject.toml
intelgraph/: .env.example  MONOREPO_LAYOUT.md  README.md  __init__.py  api.py  cognitive_bias_detector.py  cognitive_bias_mitigation_integration.py  cognitive_modeling.py  debiasing_engine.py  deception_detector.py  docker-compose.dev.yml  geo_cyber_fusion.py  metacognitive_system.py  package-lock.json  package-lock.json.old  package.json  pyproject.toml  requirements.txt
prov-ledger/: .env.example  .gitignore  Makefile  pyproject.toml
resb/: README.md  pyproject.toml
sdpwa/: Cargo.toml  README.md
src-tauri/: Cargo.toml  tauri.conf.json
vsdf/: README.md  __init__.py  constraints.py  pyproject.toml  sampler.py  schema.py  verifier.py
(+89124 files in other folders)
