[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelgraph"
version = "0.1.1"
description = "IntelGraph Core Repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
otel = []
policy = []
sbom = []
perf = []

[tool.setuptools.packages.find]
include = ["maestro*", "api*"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C90"]
ignore = ["E501"]
fix = true
exclude = [
  ".venv",
  "venv",
  "node_modules",
  "v4/archive",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
files = ["src"]

[tool.black]
line-length = 100
extend-exclude = '''
(
  (^|/)venv|
  (^|/)\.venv|
  (^|/)node_modules|
  (^|/)v4/archive|
  tools/federation_mesh\.py
)
'''
