[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelgraph"
version = "4.0.0"
description = "IntelGraph Core Repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema",
]

[project.optional-dependencies]
otel = []
policy = []
sbom = []
perf = []

[tool.setuptools.packages.find]
include = ["maestro*", "api*"]

[tool.ruff]
line-length = 100
exclude = [
  ".venv",
  "venv",
  "node_modules",
  "v4/archive",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
files = ["src"]

[tool.black]
line-length = 100
extend-exclude = '''
(
  (^|/)venv|
  (^|/)\.venv|
  (^|/)node_modules|
  (^|/)v4/archive|
  tools/federation_mesh\.py
)
'''
