[package]
name = "acdc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
indexmap = { version = "2.2", features = ["serde"] }
similar = "2.4"
thiserror = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
