[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-misinfo-defense-platform"
version = "2.1.0"
description = "Revolutionary Adversarial Misinformation Defense Platform with Cognitive, Quantum, and Consciousness Modeling"
readme = "README.md"
authors = [{name = "Summit Team", email = "team@summit-platform.ai"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security :: Misinformation Defense",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["misinformation", "adversarial", "defense", "AI", "security", "quantum", "consciousness", "cognitive"]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=1.9.0",
    "transformers>=4.15.0",
    "opencv-python>=4.5.0",
    "librosa>=0.9.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]
all = [
    "adversarial-misinfo-defense-platform[dev]"
]

[project.urls]
Homepage = "https://github.com/BrianCLong/summit#adversarial-misinfo-defense-platform"
Repository = "https://github.com/BrianCLong/summit.git"
Documentation = "https://github.com/BrianCLong/summit/blob/main/adversarial-misinfo-defense-platform/README.md"

[project.scripts]
amd-platform = "adversarial_misinfo_defense.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adversarial_misinfo_defense*", "adversarial_misinfo_defense.*"]

[tool.setuptools.package-data]
adversarial_misinfo_defense = ["*.md", "*.txt", "*.json", "web/**/*"]