[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra_dev_agent"
version = "0.1.0"
description = "Autonomous ultra-maximal extrapolative development agent"
authors = [{ name = "You" }]
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0"
  # add your LLM client, e.g. "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
