[package]
name = "apm"
version = "0.1.0"
edition = "2024"
description = "Access Path Minimizer - reduces SQL query exposure by pruning joins and columns."
authors = ["Summit Engineering"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
indexmap = "2.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.47.0"
thiserror = "1.0"

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }
