[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceh"
version = "0.1.0"
description = "Counterfactual Evaluation Harness"
authors = [{name = "Summit AI"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.2",
]
optional-dependencies = {xgboost = ["xgboost>=2.0"]}

[project.scripts]
ceh = "ceh.cli:main"
