[package]
name = "cmol"
version = "0.1.0"
edition = "2021"
description = "Cross-Modal Origin Linker core library and CLI"
authors = ["Summit Platform"]
license = "MIT"

[lib]
name = "cmol"
path = "src/lib.rs"

[[bin]]
name = "cmol"
path = "src/bin/cmol.rs"

[dependencies]
base64 = "0.21"
blake3 = "1.5"
hex = "0.4"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
