[tool.poetry]
name = "cognitive-insights-engine"
version = "0.1.0"
description = "Modular microservice for emotion & cognitive-bias indicator analysis (Ethical)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
redis = "^5.0.7"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"
transformers = "^4.41.2"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
sentence-transformers = "^2.7.0"
langdetect = "^1.0.9"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
coverage = "^7.5.4"
black = "^26.1.0"
isort = "^5.13.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
