[package]
name = "decs"
version = "0.1.0"
edition = "2024"
description = "Data Embargo & Cooling-Off Scheduler"
authors = ["Summit Automation"]
license = "Apache-2.0"

[lib]
name = "decs"
path = "src/lib.rs"

[[bin]]
name = "decs-scheduler"
path = "src/bin/decs_scheduler.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
humantime-serde = "1.1"
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
once_cell = "1.19"
