[package]
name = "des"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/summit/des"
description = "Deterministic Embedding Store core library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
ordered-float = "4.2"

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }
