[package]
name = "djce-pb"
version = "0.1.0"
edition = "2021"
description = "Dataset Join Cardinality Estimator with Privacy Bounds"
license = "Apache-2.0"
repository = "https://example.com/djce-pb"
authors = ["Summit AI"]

[lib]
name = "djce_pb"
crate-type = ["rlib", "cdylib"]

[features]
default = []
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
ahash = "0.8"
rand = { version = "0.8", features = ["std"] }
hyperloglog = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", default-features = false, optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
