[package]
name = "ibrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Immutable Business Rules Sandbox deterministic rule engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
