[package]
name = "ibrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Immutable Business Rules Sandbox deterministic rule engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
config = "0.13"
anyhow = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
