[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre"
version = "0.1.0"
description = "Summit Reasoning Evaluator Reference Implementation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Summit Team", email = "engineering@summit.ai"}
]
dependencies = [
  "pydantic>=2.0",
  "jsonschema>=4.17",
  "click>=8.0",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "isort>=5.0",
  "mypy>=1.0"
]

[project.scripts]
sre = "sre.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sre"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
