[project]
name = "prov-ledger"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "networkx",
    "prometheus-client",
    "cryptography",
    "prov",
    "sqlalchemy",
    "psycopg2-binary",
    "pymerkle",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[tool.setuptools]
packages = ["service"]
