[project]
name = "prov-ledger"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "networkx",
    "prometheus-client",
    "cryptography",
    "prov",
    "python-multipart"
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"
