[package]
name = "sdpwa"
version = "0.1.0"
edition = "2021"
authors = ["Summit Contributors"]
description = "Streaming differential privacy window aggregator with TypeScript bindings"
license = "Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
sha2 = "0.10"
thiserror = "1.0"
humantime-serde = "1.1"

wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }

[dev-dependencies]
serde_json = "1.0"
