[package]
name = "companyos-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open", "dialog-all"] }
tauri-plugin-store = "0.3"
keyring = "2"

[build-dependencies]
tauri-build = { version = "1", features = [] }