[package]
name = "agql-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agql-core = { path = "../agql-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
