[package]
name = "agql-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
ed25519-dalek = { version = "1", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
rand = "0.7"
