[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summit-fusion-sklearn"
version = "0.1.0"
description = "Feature-fusion vectorization stack (LLM + TF-IDF + Metadata) for Summit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]

[tool.setuptools]
packages = ["summit_fusion"]
