[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summit-fusion"
version = "0.1.0"
description = "Feature-fusion vectorization stack (TF-IDF + Embeddings + Metadata) for scikit-learn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
transformers = [
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
]

[tool.setuptools]
packages = ["summit_fusion"]
