[project]
name = "cdis"
version = "0.1.0"
description = "Causal discovery and intervention service"
authors = [{name = "Summit AI"}]
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=cdis --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "e2e: marks Playwright end-to-end scenarios",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = []
target-version = "py312"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101"]
