[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdis"
version = "0.1.0"
description = "Causal Discovery & Intervention Service"
authors = [{ name = "Summit" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.110.3",
  "uvicorn==0.30.1",
  "pydantic==2.8.2",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "networkx==3.3",
  "scipy==1.12.0",
  "statsmodels==0.14.2",
  "scikit-learn==1.4.2",
  "httpx==0.27.0",
  "ruff==0.5.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
